# ants-anshul

./: agent.py  ant_env.py  ant_game.py  ant_model.pt  eval.py  pyproject.toml  train.py
